--- a/index.html
+++ b/index.html
@@ -16,30 +16,26 @@
 </head>
 <body>
 
-    <h1>Akumulasi Transaksi Punokawan Group 2</h1>
+    <h1>Akumulasi Transaksi Punokawan Group</h1>
     <h2 id="currentDate"></h2>
     <h3>Total Transaksi Hari Ini:</h3>
     <div id="totalSum">Rp 0</div>
     <footer>Powered By PIGOLD th 2025</footer>
 
     <script>
-        // URL CSV dari Google Sheets
         const csvUrl = 'https://docs.google.com/spreadsheets/d/1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY/export?format=csv&gid=497270854';
 
-        // Mendapatkan tanggal hari ini dalam format 'YYYY-MM-DD'
-        const today = new Date().toISOString().split('T')[0];
+        const today = new Date();
+        const todayStr = today.toISOString().split('T')[0]; // Format: YYYY-MM-DD
 
-        // Menampilkan tanggal hari ini dalam format 'Hari, DD MMMM YYYY'
-        document.getElementById('currentDate').textContent = new Date().toLocaleDateString('id-ID', {
+        document.getElementById('currentDate').textContent = today.toLocaleDateString('id-ID', {
             weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'
         });
 
-        // Fungsi untuk memformat angka ke dalam format Rupiah
         function formatRupiah(angka) {
             return angka.toLocaleString('id-ID', { style: 'currency', currency: 'IDR' });
         }
 
-        // Mengambil dan memproses data CSV
         fetch(csvUrl)
             .then(response => response.text())
             .then(csvData => {
@@ -51,19 +47,25 @@
                         let total = 0;
 
                         data.forEach(row => {
-                            // Pastikan kolom 'Tanggal' dan 'harga Jual Rupiah (Rp)' ada dan valid
                             if (row['Tanggal'] && row['harga Jual Rupiah (Rp)']) {
-                                // Konversi tanggal ke format 'YYYY-MM-DD'
-                                const rowDate = new Date(row['Tanggal']).toISOString().split('T')[0];
+                                let rowDate = new Date(row['Tanggal']);
                                 
-                                // Jika tanggal baris sama dengan hari ini, tambahkan ke total
-                                if (rowDate === today) {
-                                    total += row['harga Jual Rupiah (Rp)'];
+                                // Perbaikan parsing tanggal jika formatnya tidak langsung dikenali
+                                if (isNaN(rowDate)) {
+                                    const dateParts = row['Tanggal'].split('-');
+                                    if (dateParts.length === 3) {
+                                        rowDate = new Date(`${dateParts[2]}-${dateParts[1]}-${dateParts[0]}`);
+                                    }
+                                }
+
+                                const rowDateStr = rowDate.toISOString().split('T')[0];
+
+                                if (rowDateStr === todayStr) {
+                                    total += parseFloat(row['harga Jual Rupiah (Rp)']) || 0;
                                 }
                             }
                         });
 
-                        // Tampilkan total dalam format Rupiah
                         document.getElementById('totalSum').textContent = formatRupiah(total);
                     }
                 });
