--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <h1>Akumulasi Transaksi Punokawan Group</h1>
+    <h1>Akumulasi Transaksi Punokawan Group 3</h1>
     <h2 id="currentDate"></h2>
     <h3>Total Transaksi Hari Ini:</h3>
     <div id="totalSum">Rp 0</div>
