--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <h1>Akumulasi Transaksi Punokawan Group 3</h1>
+    <h1>Akumulasi Transaksi Punokawan Group 4</h1>
     <h2 id="currentDate"></h2>
     <h3>Total Transaksi Hari Ini:</h3>
     <div id="totalSum">Rp 0</div>
@@ -57,7 +57,7 @@
                             console.log("Data Baris:", row);
 
                             // Cek apakah kolom 'Tanggal' dan 'harga Jual Rupiah (Rp)' ada
-                            if (!row['Tanggal'] || !row['harga Jual Rupiah (Rp)']) {
+                            if (!row['Tanggal'] || !row['Harga Jual Rupiah (Rp)']) {
                                 console.warn("Baris di-skip karena tidak memiliki data yang lengkap:", row);
                                 return;
                             }
