--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <footer>Powered By PIGOLD th 2025</footer>
 
     <script>
-        const csvUrl = 'https://docs.google.com/spreadsheets/d/1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY/export?format=csv&gid=497270854';
+        const csvUrl = 'https://docs.google.com/spreadsheets/d/1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY/edit?resourcekey=&gid=497270854#gid=497270854';
 
         const today = new Date();
         const todayStr = today.toISOString().split('T')[0]; // Format: YYYY-MM-DD
