--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>
         const SHEET_ID = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
         const API_KEY = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
-        const RANGE = "DataTransaksi!G:G";
+        const RANGE = "DataTransaksi!G:A"; // Asumsikan kolom H berisi tanggal transaksi
 
         async function fetchData() {
             try {
@@ -40,17 +40,20 @@
                     return;
                 }
                 
-                const today = new Date().toISOString().split("T")[0];
+                const today = new Date().toLocaleDateString("id-ID");
                 let total = 0;
 
                 data.values.forEach(row => {
-                    let value = parseFloat(row[0]);
-                    if (!isNaN(value)) {
-                        total += value;
+                    if (row.length >= 2) {
+                        let value = parseFloat(row[0]);
+                        let date = row[1];
+                        if (!isNaN(value) && date === today) {
+                            total += value;
+                        }
                     }
                 });
                 
-                document.getElementById("total").innerText = `Rp ${total.toLocaleString("id-ID")}`;
+                document.getElementById("total").innerText = `Rp ${Math.round(total).toLocaleString("id-ID")}`;
             } catch (error) {
                 document.getElementById("total").innerText = "Gagal mengambil data";
                 console.error("Error fetching data:", error);
