--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>
         const SHEET_ID = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
         const API_KEY = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
-        const RANGE = "DataTransaksi!G:A"; // Asumsikan kolom H berisi tanggal transaksi
+        const RANGE = "DataTransaksi!G:G"; // Asumsikan kolom H berisi tanggal transaksi
 
         async function fetchData() {
             try {
