--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         async function fetchData() {
             const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
             const sheetId = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-            const range = "DataTransaksi!A:G";
+            const range = "DataTransaksi!G:A";
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
             
             try {
@@ -63,10 +63,9 @@
     </script>
 </head>
 <body>
-    <h1>Data Transaksi      PUNOKAWAN GROUP</h1>
+    <h1>Data Transaksi PUNOKAWAN GROUP</h1>
     <div class="time">
         <p><span id="date">--</span></P>
-        <P><span id="time">--</span></p>
     </div>
     <h2>Transaksi / Hari Ini</h2>
     <p class="amount" id="amount">Memuat data...</p>
