--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         async function fetchData() {
             const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
             const sheetId = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-            const range = "DataTransaksi!G:G";
+            const range = "DataTransaksi!A:G";
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
             
             try {
@@ -63,7 +63,7 @@
     </script>
 </head>
 <body>
-    <h1>Data Transaksi Punokawan Group</h1>
+    <h1>Data Transaksi Punokawan GROUP</h1>
     <div class="time">
         <p>Tanggal: <span id="date">--</span> | Waktu: <span id="time">--</span></p>
     </div>
