--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <h1>Data Transaksi Punokawan GROUP</h1>
     <div class="time">
-        <p>Tanggal: <span id="date">--</span> | Waktu: <span id="time">--</span></p>
+        <p><span id="date">--</span> | Pukul: <span id="time">--</span></p>
     </div>
     <h2>Akumulasi Hari Ini</h2>
     <p class="amount" id="amount">Memuat data...</p>
