--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </script>
 </head>
 <body>
-    <h1>Data Transaksi PUNOKAWAN GROUP</h1>
+    <h1>Data Transaksi PUNOKAWAN GROUP 2</h1>
     <div class="time">
         <p><span id="date">--</span></p>
         <p><span id="time">--</span></p>
