--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script>
         const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
         const sheetId = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-        const range = "DataTransaksi!A:G"; // Mengambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
+        const range = "DataTransaksi!A:G"; // Ambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
 
         async function fetchData() {
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
@@ -43,10 +43,10 @@
                     return;
                 }
 
-                console.log("Data API:", data.values); // Debugging: Lihat format data dari Google Sheets API
+                console.log("Data API:", data.values); // Debugging untuk melihat format asli dari API
 
                 const today = new Date();
-                const todayFormatted = today.toISOString().split('T')[0]; // Format YYYY-MM-DD
+                const todayFormatted = today.toLocaleDateString('id-ID'); // Format dd/mm/yyyy
                 console.log("Tanggal Hari Ini:", todayFormatted); // Debugging
 
                 let total = 0;
@@ -56,18 +56,9 @@
                     let transactionDate = row[0] ? row[0].trim() : ""; // Kolom A (Tanggal)
                     let transactionValue = row[6] ? parseFloat(row[6].replace(/,/g, '')) : 0; // Kolom G (Nilai Transaksi)
 
-                    // Konversi format tanggal Sheets jika berbentuk lain
-                    let formattedDate = "";
-                    if (transactionDate.includes('/')) {
-                        let parts = transactionDate.split('/');
-                        formattedDate = `20${parts[2]}-${parts[1].padStart(2, '0')}-${parts[0].padStart(2, '0')}`;
-                    } else {
-                        formattedDate = transactionDate; // Jika sudah dalam format YYYY-MM-DD
-                    }
+                    console.log(`Data ke-${index}: Tanggal = ${transactionDate}, Nilai = ${transactionValue}`);
 
-                    console.log(`Data ke-${index}: Tanggal = ${formattedDate}, Nilai = ${transactionValue}`);
-
-                    if (formattedDate === todayFormatted && !isNaN(transactionValue)) {
+                    if (transactionDate === todayFormatted && !isNaN(transactionValue)) {
                         total += transactionValue;
                     }
                 });
@@ -98,7 +89,7 @@
     </script>
 </head>
 <body>
-    <h1>Data Transaksi PUNOKAWAN GROUP 3</h1>
+    <h1>Data Transaksi PUNOKAWAN GROUP 4</h1>
     <div class="time">
         <p><span id="date">--</span></p>
         <p><span id="time">--</span></p>
