--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
 
                     let transactionDate = row[0] ? row[0].trim() : ""; // Kolom A (Tanggal)
                     let transactionValue = row[6] ? parseFloat(row[6].replace(/,/g, '')) : 0; // Kolom G (Nilai Transaksi)
+                    let normalizedDate = ""; // Deklarasikan di awal untuk menghindari error
 
                     // Pastikan format tanggal tetap konsisten (dd/mm/yyyy)
                     let dateParts = transactionDate.split("/");
                     if (dateParts.length === 3) {
-                        let normalizedDate = `${parseInt(dateParts[0])}/${parseInt(dateParts[1])}/${dateParts[2]}`;
+                        normalizedDate = `${parseInt(dateParts[0])}/${parseInt(dateParts[1])}/${dateParts[2]}`;
                         if (normalizedDate === todayFormatted && !isNaN(transactionValue)) {
                             total += transactionValue;
                         }
@@ -96,7 +97,7 @@
     </script>
 </head>
 <body>
-    <h1>Data Transaksi PUNOKAWAN GROUP 5</h1>
+    <h1>Data Transaksi PUNOKAWAN GROUP 6</h1>
     <div class="time">
         <p><span id="date">--</span></p>
         <p><span id="time">--</span></p>
