--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
     </script>
 </head>
 <body>
-    <h1>Data Transaksi PUNOKAWAN GROUP 6</h1>
+    <h1>Data Transaksi [ PUNOKAWAN GROUP ]</h1>
     <div class="time">
         <p><span id="date">--</span></p>
         <p><span id="time">--</span></p>
     </div>
-    <h2>Akumulasi Hari Ini</h2>
+    <h2>Transaksi Hari Ini</h2>
     <p class="amount" id="amount">Memuat data...</p>
     <p class="footer">Powered By PIGOLD th 2025</p>
+    <p><i>NIlai transaksi per hari tidak boleh lebih dari deposit yang ada, jika sudah mendekati nilai deposit konfirmasi dengan owner</i></p>
 </body>
 </html>
