--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script>
         const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
         const sheetId = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-        const range = "DataTransaksi!A:G"; // Ambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
+        const range = "DataTransaksi!M:G"; // Ambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
 
         async function fetchData() {
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
