--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script>
         const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
         const sheetId = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-        const range = "DataTransaksi!G:M"; // Ambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
+        const range = "DataTransaksi!M:G"; // Ambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
 
         async function fetchData() {
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
@@ -55,7 +55,7 @@
                 data.values.forEach((row, index) => {
                     if (index === 0) return; // Lewati header jika ada
 
-                    let transactionDate = row[7] ? row[7].trim() : ""; // Kolom M (Tanggal)
+                    let transactionDate = row[12] ? row[12].trim() : ""; // Kolom M (Tanggal)
                     let transactionValue = row[6] ? parseFloat(row[6].replace(/,/g, '')) : 0; // Kolom G (Nilai Transaksi)
                     let normalizedDate = ""; // Deklarasikan di awal untuk menghindari error
 
@@ -63,7 +63,7 @@
                     if (transactionDate.includes(" ")) {
     // Jika ada jam (format: "dd/mm/yyyy hh:mm:ss")
     let dateTimeParts = transactionDate.split(" "); // Pisahkan tanggal dan waktu
-    transactionDate = dateTimeParts[0]; // Ambil hanya bagian tanggal
+    transactionDate = dateTimeParts[12]; // Ambil hanya bagian tanggal
 }
 
 let dateParts = transactionDate.split("/");
@@ -111,6 +111,7 @@ if (dateParts.length === 3) {
     </div>
     <h2>Akumulasi Hari Ini</h2>
     <p class="amount" id="amount">Memuat data...</p>
-    <p class="footer">Powered By PIGOLD th 2025</p>
+    <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
+    <p class="footer"><i>Design By PIGOLD 2025</i>i></p>
 </body>
 </html>
