--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script>
         const apiKey = "AIzaSyCZCnqUu799bOvs4TdGpqA4wnq0KXIvq4A";
         const sheetId = "1WRaA_8OTcR42t01CLehqw20ZN0nWB64xSgSEdl54vIY";
-        const range = "DataTransaksi!M:G"; // Ambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
+        const range = "DataTransaksi!G:M"; // Ambil data dari kolom A (Tanggal) dan kolom G (Nilai transaksi)
 
         async function fetchData() {
             const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
@@ -104,7 +104,7 @@ if (dateParts.length === 3) {
     </script>
 </head>
 <body>
-    <h1>Data Transaksi [PUNOKAWAN GROUP] 2</h1>
+    <h1>Data Transaksi [PUNOKAWAN GROUP]</h1>
     <div class="time">
         <p><span id="date">--</span></p>
         <p><span id="time">--</span></p>
@@ -112,6 +112,6 @@ if (dateParts.length === 3) {
     <h2>Akumulasi Hari Ini</h2>
     <p class="amount" id="amount">Memuat data...</p>
     <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
-    <p class="footer"><i>Design By PIGOLD 2025</i>i></p>
+    <p class="footer"><i>Design By PIGOLD 2025</i></p>
 </body>
 </html>
