--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
 </head>
 <body>
     <h1>Data Transaksi [PUNOKAWAN GROUP]</h1>
-    <p>______________________________</p>
+    <h2>Transaksi Hari Ini</h2>
     <div class="time">
         <p><span id="date">--</span></p>
         <p><span id="time">--</span></p>
     </div>
-    <h2>Akumulasi Hari Ini</h2>
+    <p>______________________________</p>
     <p class="amount" id="amount">Memuat data...</p>
     <p>______________________________</p>
     <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
