--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <p><span id="time">--</span></p>
     </div>
     <p>______________________________</p>
-    <p class="amount" id="amount">Memuat data...</p>
+    < class="amount" id="amount">Memuat data... >
     ______________________________
     <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
     <p class="footer"><i>Design By PIGOLD 2025</i></p>
